--- a/starter/package.json
+++ b/starter/package.json
@@ -23,5 +23,6 @@
     "eslint-plugin-gridsome": "^1.5.0",
     "prettier": "^2.1.2",
     "vue-eslint-parser": "^7.1.0"
-  }
+  },
+  "license" : "BSD-3-Clause"
 }
